// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when DE and Association have identical names should have validation failures for each entity -> DE message  1`] = `"Domain Entity named EntityName is a duplicate declaration of that name."`;

exports[`when DE and Association have identical names should have validation failures for each entity -> DE sourceMap 1`] = `
Object {
  "column": 2,
  "line": 2,
  "tokenText": "Domain Entity",
}
`;

exports[`when DE and Association have identical names should have validation failures for each entity -> association message  1`] = `"Association named EntityName is a duplicate declaration of that name."`;

exports[`when DE and Association have identical names should have validation failures for each entity -> association sourceMap 1`] = `
Object {
  "column": 2,
  "line": 9,
  "tokenText": "Association",
}
`;
